# ingenuity

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json  privacy-policy.md  robots.txt  server.js  sitemap.xml  terms-of-service.md
cpp-client/: .gitignore  CMakeLists.txt  README.md  together_api.cpp  together_api.h
template/: about.html  advanced-ai.html  ai-ethics.html  connection-status.js  cookies.js  documentation.html  gemini.html  index.html  partners.html  qwen3-235b.html  script.js  security.js  settings.html  styles.css  styles.css.patch  terms.html  transformers.html
template/assets/: CONTRIBUTING.md
